--- a/packages/client/src/app/pages/gestiones/gestiones.component.html
+++ b/packages/client/src/app/pages/gestiones/gestiones.component.html
@@ -18,6 +18,15 @@
         />
       </app-form-field>
     </ng-template>
+
+    <ng-template appHeaderFilter>
+      <app-checkbox
+        [(ngModel)]="gestionesAperturadas"
+        (ngModelChange)="onGestionesAperturadasChange()"
+      >
+        Gestiones aperturadas
+      </app-checkbox>
+    </ng-template>
   </app-header>
 
   <app-table
@@ -35,13 +44,13 @@
 
   <ng-template #fechaAperturaColumn let-gestion="element">
     <app-cell>
-      {{ gestion.fechaApertura | date }}
+      {{ gestion.fechaApertura | date: 'd/M/yyyy' }}
     </app-cell>
   </ng-template>
 
   <ng-template #fechaCierreColumn let-gestion="element">
     <app-cell *ngIf="gestion.fechaCierre; else defaultFechaCierre">
-      {{ gestion.fechaCierre | date }}
+      {{ gestion.fechaCierre | date: 'd/M/yyyy' }}
     </app-cell>
 
     <ng-template #defaultFechaCierre>
