--- a/packages/client/src/app/pages/materiales/partidas/partidas-dialog/partidas-dialog.component.html
+++ b/packages/client/src/app/pages/materiales/partidas/partidas-dialog/partidas-dialog.component.html
@@ -18,12 +18,12 @@
 
     <app-form-field>
       <app-label>Número</app-label>
-      <input appInput type="text" formControlName="numero" />
+      <input appInput type="number" formControlName="numero" />
       <app-error *ngIf="numero?.hasError('required')">
         Campo requerido
       </app-error>
       <app-error *ngIf="numero?.hasError('min')">
-        Debe ser mayor a 0
+        Debe ser un número positivo
       </app-error>
     </app-form-field>
   </form>
