--- a/client/src/app/pages/entradas/proveedores/proveedores.component.html
+++ b/client/src/app/pages/entradas/proveedores/proveedores.component.html
@@ -17,7 +17,7 @@
   </app-cell>
 </ng-template>
 
-<ng-template #verIngresosColumn let-proveedor="element">
+<ng-template #verEntradasColumn let-proveedor="element">
   <app-cell>
     <button
       appIconButton
